HIL/src/objects/Relationship__c.object
<CustomObject>
    <description>Custom object that defines a many to many relationship between two Client &amp; Prospect records. Allows users to relate a Client &amp; Prospect to another Client &amp; Prospect.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Relationship From</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliations</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Affiliation_Type__c</fullName>
        <formula>CASE(Type__c,&quot;Spouse&quot;,&quot;Personal&quot;,
&quot;Parent&quot;,&quot;Personal&quot;,
&quot;Child&quot;,&quot;Personal&quot;,
&quot;Employer&quot;,&quot;Professional&quot;,
&quot;Employee&quot;,&quot;Professional&quot;,
&quot;Son-in-law&quot;,&quot;Personal&quot;,
&quot;Daughter-in-law&quot;,&quot;Personal&quot;,
&quot;Father-in-law&quot;,&quot;Personal&quot;,
&quot;Mother-in-law&quot;,&quot;Personal&quot;,
&quot;Grandmother&quot;,&quot;Personal&quot;,
&quot;Grandfather&quot;,&quot;Personal&quot;,
&quot;Sister&quot;,&quot;Personal&quot;,
&quot;Brother&quot;,&quot;Personal&quot;,
&quot;Aunt&quot;,&quot;Personal&quot;,
&quot;Uncle&quot;,&quot;Personal&quot;,
&quot;CPA&quot;,&quot;Professional&quot;,
&quot;Attorney&quot;,&quot;Professional&quot;,
&quot;Insurance Agent&quot;,&quot;Professional&quot;,
&quot;Strategic Partner&quot;,&quot;Professional&quot;,
&quot;Wealth Planner&quot;,&quot;Professional&quot;,
&quot;Portfolio Manager&quot;,&quot;Professional&quot;,
&quot;Investment Banker&quot;,&quot;Professional&quot;,
&quot;Business Partner&quot;,&quot;Professional&quot;,
&quot;&quot;)</formula>
        <label>Affiliation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReciprocalRelationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ReciprocalRelationship</label>
        <referenceTo>Relationship__c</referenceTo>
        <relationshipLabel>Reciprocal Affiliations</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Details__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id , &quot;Click here for details&quot;, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliations (Relationship To)</relationshipLabel>
        <relationshipName>Affiliations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Affiliation_Text__c</fullName>
        <label>Related Affiliation Text</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_To_Age__c</fullName>
        <formula>Related_Account__r.Age__c</formula>
        <label>Relationship To Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SystemCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SystemCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son-in-law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter-in-law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father-in-law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother-in-law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandchild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandmother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandfather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aunt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wealth Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Banker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step-son</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step-daughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Niece</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Affiliation</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Affiliation #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <recordTypes>
        <fullName>Contact_To_Contact</fullName>
        <active>true</active>
        <label>Contact To Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>